# zephyr_out_of_tree_board

./: CMakeLists.txt
boards/arm/new_board/: Kconfig  Kconfig.board  Kconfig.defconfig  new_board.yaml  nrf52840_pca10056_defconfig
